k8s/home-k3s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wh-vue.ianf.dev
      secretName: frontend-tls # Cert-Manager will create this certificate
  rules:
    - host: wh-vue.ianf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend # Target's service name
                port:
                  name: public # 80
