k8s/home-k3s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "2a00:23c6:8b94:8900:9cdc:6dc3:da95:6a1c/64"  #IP whitelist
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wh-grafana.ianf.dev
      secretName: grafana-tls
  rules:
    - host: wh-grafana.ianf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
